[package]
name = "memory-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies.windows]
version = "0.59"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_Input_KeyboardAndMouse"
]

[dependencies]
egui = "0.30.0"
egui_glow = "0.30.0"
lazy_static = "1.5.0"
memory_sys = { version = "*", path = "../memory-sys", features = ["internal"]}
winit = "0.30.9"
