[package]
name = "memory_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.169"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory"
]

[features]
internal = []
external = []
